# elkcpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  vcpkg.json
cmake/: FindProtobuf.cmake
examples/: AsyncSushiController.cpp  CMakeLists.txt  SimpleSushiController.cpp  SushiControlExample.cpp
include/: control_interface.h  sushi_client.h  sushi_grpc_client.h  sushi_info_types.h
include/elkcpp/: control_interface.h  controller_types.h  sushi_client.h
include/sushi_controller/: control_interface.h  controller_types.h  sushi_client.h
protos/: sushi_rpc.proto
src/: CMakeLists.txt
src/client/: async_client_call_data.cpp  async_client_call_data.h  audio_graph_controller.cpp  audio_graph_controller.h  audio_routing_controller.cpp  audio_routing_controller.h  cv_gate_controller.cpp  cv_gate_controller.h  grpc_utils.h  keyboard_controller.cpp  keyboard_controller.h  midi_controller.cpp  midi_controller.h  notification_controller.cpp  notification_controller.h  osc_controller.cpp  osc_controller.h  parameter_controller.cpp  parameter_controller.h  program_controller.cpp  program_controller.h  session_controller.cpp  session_controller.h  sushi_grpc_client.cpp  sushi_grpc_client.h  system_controller.cpp  system_controller.h  timing_controller.cpp  timing_controller.h  transport_controller.cpp  transport_controller.h
test/: CMakeLists.txt
test/unittests/: audio_graph_integration_test.cpp  audio_routing_integration_test.cpp  cv_gate_integration_test.cpp  keyboard_integration_test.cpp  midi_integration_test.cpp  notification_integration_test.cpp  osc_integration_test.cpp  parameter_integration_test.cpp  program_integration_test.cpp  session_integation_test.cpp  sushi_client_integration_test.cpp  system_integration_test.cpp  timing_integration_test.cpp  transport_integration_test.cpp
test/unittests/test_utils/: audio_graph_server_mockup.h  audio_routing_server_mockup.h  cv_gate_server_mockup.h  keyboard_server_mockup.h  midi_server_mockup.h  notification_server_mockup.h  osc_server_mockup.h  parameter_server_mockup.h  program_server_mockup.h  session_server_mockup.h  sushi_server_mockup.h  system_server_mockup.h  timing_server_mockup.h  transport_server_mockup.h
